--- a/Src/dronecan_application/CMakeLists.txt
+++ b/Src/dronecan_application/CMakeLists.txt
@@ -15,6 +15,7 @@ include(${ROOT_DIR}/Libs/Dronecan/CMakeLists.txt)
 set(applicationSourceCode
     ${libparamsSrc}
     ${DRONECAN_SOURCES}
+    ${ROOT_DIR}/Src/dronecan_application/logger.cpp
     ${ROOT_DIR}/Src/dronecan_application/application.cpp
 )
 set(applicationHeaders
