--- a/Src/dronecan_application/params.yaml
+++ b/Src/dronecan_application/params.yaml
@@ -13,3 +13,48 @@ system.name:
   enum: PARAM_SYSTEM_NAME
   flags: mutable
   default: "co.raccoonlab.mini"
+
+lights.max_intensity:
+  type: Integer
+  note: Defines the max intensity of the lights.
+  enum: PARAM_LIGHTS_MAX_INTENSITY
+  flags: mutable
+  default: 0
+  min: 0
+  max: 255
+
+lights.default_color:
+  type: Integer
+  note: Defines a default color of the lights.
+  enum: PARAM_LIGHTS_DEFAULT_COLOR
+  flags: mutable
+  default: 0
+  min: 0
+  max: 255
+
+lights.type:
+  type: Integer
+  note: Defines an intensity transition rate of the lights.
+  enum: PARAM_LIGHTS_TYPE
+  flags: mutable
+  default: 0
+  min: 0
+  max: 255
+
+lights.blink_period_ms:
+  type: Integer
+  note: Defines a blink period of the lights [ms].
+  enum: PARAM_LIGHTS_BLINK_PERIOD_MS
+  flags: mutable
+  default: 0
+  min: 0
+  max: 255
+
+lights.duty_cycle_pct:
+  type: Integer
+  note: Defines a duty cycle of the lights [%].
+  enum: PARAM_LIGHTS_DUTY_CYCLE_PTC
+  flags: mutable
+  default: 0
+  min: 0
+  max: 255
