--- a/Src/dronecan_application/params.yaml
+++ b/Src/dronecan_application/params.yaml
@@ -14,6 +14,15 @@ system.name:
   flags: mutable
   default: "arl.lights"
 
+light.id:
+  type: Integer
+  note: Defines the light id.
+  enum: PARAM_LIGHT_ID
+  flags: mutable
+  default: 0
+  min: 0
+  max: 255
+
 lights.max_intensity:
   type: Integer
   note: Defines the max intensity of the lights [%].
