--- a/Src/dronecan_application/params.yaml
+++ b/Src/dronecan_application/params.yaml
@@ -9,14 +9,14 @@ uavcan.node.id:
 
 system.name:
   type: String
-  note: Defines custom node name. If empty, the node will use the default name.
+  note: Defines custom node name.
   enum: PARAM_SYSTEM_NAME
   flags: mutable
   default: "arl.lights"
 
-light.id:
+lights.id:
   type: Integer
-  note: Defines the light id.
+  note: Defines the lights id. The default value is zero, which for PX4 0 means UI LED.
   enum: PARAM_LIGHT_ID
   flags: mutable
   default: 0
@@ -34,7 +34,7 @@ lights.max_intensity:
 
 lights.default_color:
   type: Integer
-  note: Defines a default color of the lights.
+  note: Defines a default color of the lights. 0 - red, 1 - green, 2 - blue, 3 - cyan, 4 - magenta, 5 - yellow, 6 - white, 7 - turned off
   enum: PARAM_LIGHTS_DEFAULT_COLOR
   flags: mutable
   default: 0
@@ -43,7 +43,7 @@ lights.default_color:
 
 lights.type:
   type: Integer
-  note: Defines an intensity transition rate of the lights.
+  note: Defines an intensity transition rate of the lights. 0 - solid (steady and continuous illumination), 1 - blinking (rapid on-off cycling of colors), 2 - pulsing (gradual increase and decrease in brightness or color intensity).
   enum: PARAM_LIGHTS_TYPE
   flags: mutable
   default: 2
@@ -52,7 +52,7 @@ lights.type:
 
 lights.blink_period_ms:
   type: Integer
-  note: Defines a blink period of the lights [ms].
+  note: Defines a blink period of the lights [ms]. This parameter has an effect only when lights.type=1 (blinking)
   enum: PARAM_LIGHTS_BLINK_PERIOD_MS
   flags: mutable
   default: 1000
