--- a/Src/dronecan_application/params.yaml
+++ b/Src/dronecan_application/params.yaml
@@ -52,7 +52,7 @@ lights.type:
 
 lights.blink_period_ms:
   type: Integer
-  note: Defines a blink period of the lights [ms]. This parameter has an effect only when lights.type=1 (blinking)
+  note: Defines a blink period of the lights [ms]. This parameter has no effect when lights.type=0 (solid)
   enum: PARAM_LIGHTS_BLINK_PERIOD_MS
   flags: mutable
   default: 1000
@@ -68,3 +68,12 @@ lights.duty_cycle_pct:
   default: 50
   min: 0
   max: 100
+
+lights.verbose:
+  type: Integer
+  note: Defines the operational mode of the node. If set to 1, uavcan.equipment.indication.LightsCommand will be sent, containing current LED color.
+  enum: PARAM_LIGHTS_VERBOSE
+  flags: mutable
+  default: 0
+  min: 0
+  max: 1
