--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(${EXECUTABLE}
     ${applicationSourceCode}
     ${BUILD_SRC_DIR}/params.cpp
     ${ROOT_DIR}/Src/periphery/led/led.cpp
+    ${ROOT_DIR}/Src/periphery/servos/common.cpp
     ${ROOT_DIR}/Src/platform/${APP_PLATFORM}/adc.cpp
     ${ROOT_DIR}/Src/platform/${APP_PLATFORM}/gpio.cpp
     ${ROOT_DIR}/Src/platform/${APP_PLATFORM}/i2c.cpp
