--- a/Src/dronecan_application/CMakeLists.txt
+++ b/Src/dronecan_application/CMakeLists.txt
@@ -20,6 +20,7 @@ set(applicationSourceCode
     ${ROOT_DIR}/Src/dronecan_application/logger.cpp
     ${ROOT_DIR}/Src/dronecan_application/modules/LightsModule.cpp
     ${ROOT_DIR}/Src/dronecan_application/modules/CircuitStatusModule.cpp
+    ${ROOT_DIR}/Src/dronecan_application/modules/PWMModule.cpp
     ${ROOT_DIR}/Src/dronecan_application/application.cpp
 )
 set(applicationHeaders
