--- a/Src/dronecan_application/CMakeLists.txt
+++ b/Src/dronecan_application/CMakeLists.txt
@@ -18,6 +18,7 @@ set(applicationSourceCode
     ${ROOT_DIR}/Src/dronecan_application/logger.cpp
     ${ROOT_DIR}/Src/dronecan_application/modules/LightsModule.cpp
     ${ROOT_DIR}/Src/dronecan_application/modules/CircuitStatusModule.cpp
+    ${ROOT_DIR}/Src/dronecan_application/modules/PressureModule.cpp
     ${ROOT_DIR}/Src/dronecan_application/application.cpp
 )
 set(applicationHeaders
